upd: make `ImageMaskSurface` more customizable

--- a/PhotoPasser/Themes/Generic.xaml
+++ b/PhotoPasser/Themes/Generic.xaml
@@ -200,7 +200,8 @@
                             <!-- Background Image -->
                             <Image
                                 Stretch="{TemplateBinding ImageStretch}"
-                                Source="{TemplateBinding BackgroundImage}" />
+                                Source="{TemplateBinding BackgroundImage}"
+                                VerticalAlignment="{TemplateBinding ImageVerticalAlignment}"/>
 
                             <!-- Mask -->
                             <Rectangle
