--- a/PhotoPasser/Views/TaskOverview.xaml
+++ b/PhotoPasser/Views/TaskOverview.xaml
@@ -9,24 +9,71 @@
     xmlns:conv="using:PhotoPasser.Converters"
     xmlns:c="using:PhotoPasser.Controls"
     xmlns:helper="using:PhotoPasser.Helper"
+    xmlns:primitive="using:PhotoPasser.Primitive"
+    xmlns:tk="using:CommunityToolkit.WinUI.Controls"
     mc:Ignorable="d">
     <Page.Resources>
         <conv:UriImageSourceConverter x:Key="UriImageSourceConverter"/>
         <helper:SelfReference Value="{x:Bind}" x:Key="PageSelf"/>
-        
+        <conv:SortOrderToIconConverter x:Key="SortOrderToIconConverter"/>
+        <conv:SortOrderToDescriptionConverter x:Key="SortOrderToDescriptionConverter"/>
+        <conv:TaskSortByToDisplayConverter x:Key="TaskSortByToDisplayConverter"/>
     </Page.Resources>
     <Grid RowSpacing="36" Padding="36,40">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="1*" />
         </Grid.RowDefinitions>
         <TextBlock Grid.Row="0" Style="{ThemeResource TitleTextBlockStyle}" x:Uid="ms-resource:///TaskOverview/HomeLabel"/>
-        <Grid Grid.Row="1" RowSpacing="16">
+
+        <!-- 排序控件区域 -->
+        <Grid Grid.Row="1" ColumnSpacing="12" HorizontalAlignment="Left">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+
+            <StackPanel HorizontalAlignment="Left" VerticalAlignment="Top" Orientation="Horizontal" Spacing="16">
+                <Grid ColumnDefinitions="Auto,Auto" ColumnSpacing="8">
+                    <TextBlock Grid.Column="0" VerticalAlignment="Center" Foreground="{ThemeResource TextFillColorSecondary}" Style="{StaticResource CaptionTextBlockStyle}">
+                        排序依据
+                    </TextBlock>
+                    <ComboBox Grid.Column="1"
+                          ItemsSource="{x:Bind ViewModel.SortByOptions}"
+                          SelectedItem="{x:Bind ViewModel.CurrentSortBy, Mode=TwoWay}"
+                          HorizontalAlignment="Stretch"
+                          MinWidth="150">
+                        <ComboBox.ItemTemplate>
+                            <DataTemplate x:DataType="primitive:TaskSortBy">
+                                <TextBlock Text="{x:Bind Converter={StaticResource TaskSortByToDisplayConverter}}"/>
+                            </DataTemplate>
+                        </ComboBox.ItemTemplate>
+                    </ComboBox>
+                </Grid>
+                <Grid ColumnDefinitions="Auto,Auto" ColumnSpacing="8">
+                    <TextBlock Grid.Column="0" VerticalAlignment="Center" Foreground="{ThemeResource TextFillColorSecondary}" Style="{StaticResource CaptionTextBlockStyle}">
+                        排序顺序
+                    </TextBlock>
+                    <Button Grid.Column="1"
+                            Command="{x:Bind ViewModel.ToggleSortDirectionCommand}"
+                            ToolTipService.ToolTip="切换排序方向">
+                        <StackPanel Orientation="Horizontal" Spacing="8">
+                            <FontIcon Glyph="{x:Bind ViewModel.CurrentSortOrder, Converter={StaticResource SortOrderToIconConverter},Mode=OneWay}" FontSize="16"/>
+                            <TextBlock Text="{x:Bind ViewModel.CurrentSortOrder, Converter={StaticResource SortOrderToDescriptionConverter},Mode=OneWay}"/>
+                        </StackPanel>
+                    </Button>
+                </Grid>
+            </StackPanel>
+
+        </Grid>
+
+        <Grid Grid.Row="2" RowSpacing="16">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
-            <GridView Name="TasksView" ItemsSource="{x:Bind ViewModel.Tasks}" Grid.Row="0" SelectionMode="None">
+            <GridView Name="TasksView" ItemsSource="{x:Bind ViewModel.Tasks, Mode=OneWay}" Grid.Row="0" SelectionMode="None">
                 <GridView.ItemTemplate>
                     <DataTemplate x:DataType="models:FiltTask">
                         <UserControl x:Name="TaskItemPresenter" PointerEntered="LibraryItem_PointerEntered" PointerExited="LibraryItem_PointerExited" IsDoubleTapEnabled="True" DoubleTapped="TaskItemPresenter_DoubleTapped">
@@ -39,14 +86,14 @@
                                                 CornerRadius="{StaticResource OverlayCornerRadius}">
                                 <c:ImageMaskSurface.MaskStops>
                                     <c:MaskStop Offset="0.0" Alpha="0"/>
-                                    <c:MaskStop Offset="0.3" Alpha="0"/>
-                                    <c:MaskStop Offset="0.5" Alpha="120"/>
+                                    <c:MaskStop Offset="0.2" Alpha="0"/>
+                                    <c:MaskStop Offset="0.4" Alpha="120"/>
                                     <c:MaskStop Offset="0.576" Alpha="210"/>
                                     <c:MaskStop Offset="1.0" Alpha="255"/>
                                 </c:ImageMaskSurface.MaskStops>
-                                
+
                                 <Grid ColumnSpacing="16" Padding="16" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-                                    
+
                                     <Grid HorizontalAlignment="Stretch" MaxHeight="88" VerticalAlignment="Bottom">
                                         <Grid.RowDefinitions>
                                             <RowDefinition Height="20" />
